xserver-xorg-video-nouveau (1:1.0.7-1) UNRELEASED; urgency=low

  [ Maarten Lankhorst ]
  * New upstream release.

  [ Sven Joachim ]
  * Remove patch 03-fix-shaders-on-big-endian-machines.diff, applied
    upstream.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Wed, 27 Mar 2013 13:37:09 +0100

xserver-xorg-video-nouveau (1:1.0.6-1) experimental; urgency=low

  [ Sven Joachim ]
  * Bump build-dependency on libdrm-dev to (>= 2.4.40-1) and add an
    override for the resulting lintian warning.

  [ Maarten Lankhorst ]
  * New upstream release.
  * Remove 02-kms-edid-block-fix.patch, upstreamed.

 -- Sven Joachim <svenjoac@gmx.de>  Mon, 07 Jan 2013 21:16:59 +0100

xserver-xorg-video-nouveau (1:1.0.4-1) experimental; urgency=low

  [ Maarten Lankhorst ]
  * New upstream release.
  * Drop 02-drm-nouveau-newabi.patch and require libdrm 2.4.34
  * add 02-kms-edid-block-fix.patch from upstream commit.

  [ Timo Aaltonen ]
  * watch: Use the .gz tarball, and update the url.

 -- Sven Joachim <svenjoac@gmx.de>  Mon, 26 Nov 2012 19:18:41 +0100

xserver-xorg-video-nouveau (1:1.0.1-5) unstable; urgency=low

  * New patch 03-fix-shaders-on-big-endian-machines.diff from
    Marcin Slucarz, fixes missing fonts on NV30 cards on powerpc
    (Closes: #699214).

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 07 Feb 2013 18:14:24 +0100

xserver-xorg-video-nouveau (1:1.0.1-4) unstable; urgency=low

  * Cherry-pick some bugfixes from upstream:
    - exa: use CLAMP_TO_EDGE for RepeatPad.
    - shadowfb: fix segfault due to reading outside of shadow buffer.
    - dri2: Fix potential race and crash for swap at next vblank.
      (Closes: #686474)

 -- Sven Joachim <svenjoac@gmx.de>  Sat, 17 Nov 2012 11:04:13 +0100

xserver-xorg-video-nouveau (1:1.0.1-3) unstable; urgency=low

  * Update NEWS.Debian, Debian kernels from 3.2.23-1 onward are
    sufficient for Fermi acceleration (Closes: #679557).

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 26 Jul 2012 18:03:06 +0200
